adding all my sass files

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ tmp/**/*
 scratch
 /public/assets
 /public/stylesheets/.sass-cache/
-/public/stylesheets/sass
 PITCH
 YUI-cheat-sheet
+20101116-staging-db.sql
