--- a/config/keys.yml
+++ b/config/keys.yml
@@ -6,6 +6,8 @@
 #-----------------------------------------------------------------------------------------------------------------------
 test:
     domain: localhost:3000
+    encryption:
+      password: 'f438229716cab43569496f3a3630b3727524b81b'
     email:
         mailbox_username: younker_test
         mailbox_password: test
@@ -16,9 +18,23 @@ test:
       shared_secret: '4d7d5ff0f2fd6285c0c94d8b59df02e4b4736723'
       app_id: 'C9syf33e'
       base: 'http://where.yahooapis.com/geocode'
+    twitter:
+      base: "http://twitter.com/share"
+      username: ynkr
+    linkedin:
+      base: 'http://www.linkedin.com/shareArticle'
+      source: '28dev.com'
+    facebook:
+      app_name: ynkr
+      app_url: 'http://www.ynkr.org/'
+      app_id: '138541152866086'
+      app_secret: '07b63899d7c2257b53a560f8d76866e9'
+
 
 development:
     domain: localhost:3000
+    encryption:
+      password: '35bc1e79038fa88673fa64b094b92bb79fa571b1'
     email:
         mailbox_username: younker_test
         mailbox_password: test
@@ -29,9 +45,22 @@ development:
       shared_secret: '4d7d5ff0f2fd6285c0c94d8b59df02e4b4736723'
       app_id: 'C9syf33e'
       base: 'http://where.yahooapis.com/geocode'
+    twitter:
+      base: "http://twitter.com/share"
+      username: ynkr
+    linkedin:
+      base: 'http://www.linkedin.com/shareArticle'
+    facebook:
+      app_name: ynkr
+      app_url: 'http://www.ynkr.org/'
+      app_id: '138541152866086'
+      app_secret: '07b63899d7c2257b53a560f8d76866e9'
+
 
 staging:
     domain: localhost:3000
+    encryption:
+      password: '190c3c31098e943d0faeb91d2c1c00e0f70bd086'
     email:
         mailbox_username: younker_test
         mailbox_password: test
@@ -42,3 +71,13 @@ staging:
       shared_secret: '4d7d5ff0f2fd6285c0c94d8b59df02e4b4736723'
       app_id: 'C9syf33e'
       base: 'http://where.yahooapis.com/geocode'
+    twitter:
+      base: "http://twitter.com/share"
+      username: ehouseoffers
+    linkedin:
+      base: 'http://www.linkedin.com/shareArticle'
+    facebook:
+      app_name: ynkr
+      app_url: 'http://www.ynkr.org/'
+      app_id: '138541152866086'
+      app_secret: '07b63899d7c2257b53a560f8d76866e9'
