--- a/config/keys.yml
+++ b/config/keys.yml
@@ -3,6 +3,7 @@
 # COPY this file. DO NOT commit to svn
 #
 # Yahoo PlaceFinder -- https://developer.apps.yahoo.com/projects -- jason_younker@yahoo.com
+#
 #-----------------------------------------------------------------------------------------------------------------------
 test:
     domain: localhost:3000
@@ -29,7 +30,11 @@ test:
       app_url: 'http://www.ynkr.org/'
       app_id: '138541152866086'
       app_secret: '07b63899d7c2257b53a560f8d76866e9'
-
+    salesforce:
+      base: 'https://www.salesforce.com/services/Soap/u/10.0'
+      username: 'donktwo@28dev.com'
+      password: 'eH0us30ff3rs'
+      token: 'CaTv2rGfYHk3d3VbUe9vKUceC'
 
 development:
     domain: localhost:3000
@@ -55,7 +60,11 @@ development:
       app_url: 'http://www.ynkr.org/'
       app_id: '138541152866086'
       app_secret: '07b63899d7c2257b53a560f8d76866e9'
-
+    salesforce:
+      base: 'https://www.salesforce.com/services/Soap/u/10.0'
+      username: 'donktwo@28dev.com'
+      password: 'eH0us30ff3rs'
+      token: 'CaTv2rGfYHk3d3VbUe9vKUceC'
 
 staging:
     domain: localhost:3000
@@ -81,3 +90,8 @@ staging:
       app_url: 'http://www.ynkr.org/'
       app_id: '138541152866086'
       app_secret: '07b63899d7c2257b53a560f8d76866e9'
+    salesforce:
+      base: 'https://www.salesforce.com/services/Soap/u/10.0'
+      username: 'donktwo@28dev.com'
+      password: 'eH0us30ff3rs'
+      token: 'CaTv2rGfYHk3d3VbUe9vKUceC'
