--- a/config/keys.yml
+++ b/config/keys.yml
@@ -31,10 +31,10 @@ test:
       app_id: '138541152866086'
       app_secret: '07b63899d7c2257b53a560f8d76866e9'
     salesforce:
-      base: 'https://www.salesforce.com/services/Soap/u/10.0'
-      username: 'donktwo@28dev.com'
-      password: 'eH0us30ff3rs'
-      token: 'CaTv2rGfYHk3d3VbUe9vKUceC'
+      base: 'https://test.salesforce.com/services/Soap/c/20.0'
+      username: 'eho_sandbox@28dev.com'
+      password: 'esandb0x'
+      token: 'K4SwQvALIKyoJy2v3FFgoT4qb'
 
 development:
     domain: localhost:3000
@@ -61,10 +61,10 @@ development:
       app_id: '138541152866086'
       app_secret: '07b63899d7c2257b53a560f8d76866e9'
     salesforce:
-      base: 'https://www.salesforce.com/services/Soap/u/10.0'
-      username: 'donktwo@28dev.com'
-      password: 'eH0us30ff3rs'
-      token: 'CaTv2rGfYHk3d3VbUe9vKUceC'
+      base: 'https://test.salesforce.com/services/Soap/c/20.0'
+      username: 'eho_sandbox@28dev.com'
+      password: 'esandb0x'
+      token: 'K4SwQvALIKyoJy2v3FFgoT4qb'
 
 staging:
     domain: localhost:3000
@@ -93,5 +93,5 @@ staging:
     salesforce:
       base: 'https://www.salesforce.com/services/Soap/u/10.0'
       username: 'donktwo@28dev.com'
-      password: 'eH0us30ff3rs'
-      token: 'CaTv2rGfYHk3d3VbUe9vKUceC'
+      password: 'eH0use0ffers'
+      token: 'HEazAX4dUK1t8LRXFOViTysH'
