--- a/config/keys.yml
+++ b/config/keys.yml
@@ -32,9 +32,10 @@ test:
       app_secret: '07b63899d7c2257b53a560f8d76866e9'
     salesforce:
       base: 'https://test.salesforce.com/services/Soap/c/20.0'
-      username: 'eho_sandbox@28dev.com'
-      password: 'esandb0x'
-      token: 'K4SwQvALIKyoJy2v3FFgoT4qb'
+      username: 'donktwo@28dev.com.eho'
+      password: 'eH0use0ffers'
+      token: 'TWy65qVwBXaFdtCzWgYUaG2D'
+      default_account_id: '001C000000nnPUcIAM'
 
 development:
     domain: localhost:3000
@@ -61,10 +62,11 @@ development:
       app_id: '138541152866086'
       app_secret: '07b63899d7c2257b53a560f8d76866e9'
     salesforce:
-      base: 'https://test.salesforce.com/services/Soap/c/20.0'
-      username: 'eho_sandbox@28dev.com'
-      password: 'esandb0x'
-      token: 'K4SwQvALIKyoJy2v3FFgoT4qb'
+      base: 'https://www.salesforce.com/services/Soap/u/10.0'
+      username: 'donktwo@28dev.com'
+      password: 'eH0use0ffers'
+      token: 'HEazAX4dUK1t8LRXFOViTysH'
+      default_account_id: '001C000000nnPUcIAM'
 
 staging:
     domain: localhost:3000
@@ -95,3 +97,4 @@ staging:
       username: 'donktwo@28dev.com'
       password: 'eH0use0ffers'
       token: 'HEazAX4dUK1t8LRXFOViTysH'
+      default_account_id: '001C000000nnPUcIAM'
