Finally fixed the sforce staging login credentials

--- a/config/keys.yml
+++ b/config/keys.yml
@@ -31,10 +31,10 @@ test:
       app_id: '138541152866086'
       app_secret: '07b63899d7c2257b53a560f8d76866e9'
     salesforce:
-      base: 'https://test.salesforce.com/services/Soap/c/20.0'
+      base: 'https://test.salesforce.com/services/Soap/u/10.0'
       username: 'ehouseoffers@28dev.com.eho'
       password: 'eH0use0ffers'
-      token: 'TWy65qVwBXaFdtCzWgYUaG2D'
+      token: '6ckxMaUvJUGfosXZTEWgbJ4pU'
       default_account_id: '001C000000nnPUcIAM'
 
 development:
@@ -62,10 +62,10 @@ development:
       app_id: '138541152866086'
       app_secret: '07b63899d7c2257b53a560f8d76866e9'
     salesforce:
-      base: 'https://www.salesforce.com/services/Soap/u/10.0'
-      username: 'ehouseoffers@28dev.com'
+      base: 'https://test.salesforce.com/services/Soap/u/10.0'
+      username: 'ehouseoffers@28dev.com.eho'
       password: 'eH0use0ffers'
-      token: 'HEazAX4dUK1t8LRXFOViTysH'
+      token: '6ckxMaUvJUGfosXZTEWgbJ4pU'
       default_account_id: '001C000000nnPUcIAM'
 
 staging:
@@ -98,3 +98,5 @@ staging:
       password: 'eH0use0ffers'
       token: 'HEazAX4dUK1t8LRXFOViTysH'
       default_account_id: '001C000000nnPUcIAM'
+
+
